--- a/HockeyApp/StartGamePage.xaml
+++ b/HockeyApp/StartGamePage.xaml
@@ -41,10 +41,8 @@
                     <RowDefinition Height="120"  />
                 </Grid.RowDefinitions>
                 <TextBlock x:Name="tb_greetingOutput" Grid.Row="0" />
-                <Button x:Name="btn_byTime" Grid.Row="1" Style="{StaticResource RedButton}" Content="Limit by Time"
-                       BorderBrush="White" Click="BtnOption_OnClick" />
-                <Button x:Name="btn_byScore" Grid.Row="2" Style="{StaticResource RedButton}" Content="Limit by Score"
-                        BorderBrush="White" Click="BtnOption_OnClick" />
+                <Button x:Name="btn_byTime" Grid.Row="1" Style="{StaticResource RedButton}" Content="Limit by Time" Click="BtnOption_OnClick" />
+                <Button x:Name="btn_byScore" Grid.Row="2" Style="{StaticResource RedButton}" Content="Limit by Score" Click="BtnOption_OnClick" />
             </Grid>
             
             <local:VolumeControl x:Name="vc" Grid.Row="2" VerticalAlignment="Bottom" />
